# acres

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
libaec-sys/: Cargo.toml  build.rs
libaec-sys/src/: lib.rs  szlib.rs
src/: buffer.rs  io.rs  lib.rs  sz.rs
